--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,11 @@
 @import "variables.less";
 @import "global.less";
-
+@import "fonts.less";
+@import "blocks/page.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/header.less";
+@import "blocks/main.less";
+@import "blocks/new-design.less";
+@import "blocks/video-shooting.less";
+@import "blocks/accessories.less";
+@import "blocks/apps.less";
