--- a/source/less/blocks/new-design.less
+++ b/source/less/blocks/new-design.less
@@ -60,7 +60,6 @@
     margin-right: 0;
     background-image: url('../../img/phone-baner-desk.jpg');
     background-size: cover;
-    // max-width: 222px;
   }
 }
 
@@ -79,6 +78,10 @@
 
   @media (min-width: 1000px) {
     margin-top: 153px;
+  }
+
+  @media (min-width: 1070px) {
+    margin-top: 203px;
   }
 }
 
@@ -107,10 +110,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  @media (min-width: 1000px) {
-  //  max-width: 223px;
-  }
 }
 
 .new-design__text {
@@ -136,10 +135,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  @media (min-width: 1000px) {
-  //  max-width: 222px;
-  }
 }
 
 .new-design__bottom-baner {
@@ -154,7 +149,6 @@
   }
 
   @media (min-width: 1000px) {
-    // max-width: 223px;
     flex-basis: 25%;
   }
 
