--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -34,12 +34,12 @@
 }
 
 .header__link-e {
-  background-image: url('../../img/logo-e-mob.svg');
+  background-image: url('../img/logo-e-mob.svg');
   background-repeat: no-repeat;
   margin: 0 15px;
 
   @media (min-width: 720px) {
-    background-image: url('../../img/logo-e-desc.svg');
+    background-image: url('../img/logo-e-desc.svg');
     margin: 5px 22px 0 31px;
   }
 
@@ -49,14 +49,14 @@
 }
 
 .header__link-m {
-  background-image: url('../../img/logo-m-mob.svg');
+  background-image: url('../img/logo-m-mob.svg');
   background-repeat: no-repeat;
   background-position: center;
   width: 26px;
   height: 26px;
 
   @media (min-width: 720px) {
-    background-image: url('../../img/logo-m-desc.svg');
+    background-image: url('../img/logo-m-desc.svg');
     width: 35px;
     height: 35px;
     margin: 5px 0 0 0;
@@ -101,7 +101,7 @@
   cursor: pointer;
   width: 32px;
   height: 32px;
-  background-image: url('../../img/burger.svg');
+  background-image: url('../img/burger.svg');
   background-repeat: no-repeat;
   background-position: center;
   border: none;
