--- a/source/less/blocks/new-design.less
+++ b/source/less/blocks/new-design.less
@@ -43,14 +43,14 @@
   order: 1;
   max-width: 290px;
   min-height: 307px;
-  background-image: url('../../img/phone-baner.jpg');
+  background-image: url('../img/phone-baner.jpg');
   background-repeat: no-repeat;
 
   @media (min-width: 720px) {
     min-height: 333px;
     max-width: 325px;
     margin-right: 20px;
-    background-image: url('../../img/phone-baner-tablet.jpg');
+    background-image: url('../img/phone-baner-tablet.jpg');
   }
 
   @media (min-width: 1000px) {
@@ -58,7 +58,7 @@
     flex-basis: 25%;
     min-height: 304px;
     margin-right: 0;
-    background-image: url('../../img/phone-baner-desk.jpg');
+    background-image: url('../img/phone-baner-desk.jpg');
     background-size: cover;
   }
 }
