--- a/source/less/blocks/video-shooting.less
+++ b/source/less/blocks/video-shooting.less
@@ -36,21 +36,21 @@
   margin: 0 auto;
   width: 320px;
   height: 170px;
-  background-image: url('../../img/video-shooting-mob.jpg');
+  background-image: url('../img/video-shooting-mob.jpg');
   background-repeat: no-repeat;
   margin-bottom: 30px;
 
   @media (min-width: 720px) {
     width: 325px;
     height: 173px;
-    background-image: url('../../img/video-shooting-tab.jpg');
+    background-image: url('../img/video-shooting-tab.jpg');
   }
 
   @media (min-width: 1000px) {
     width: 465px;
     height: 248px;
     margin: 0 0 0 25px;
-    background-image: url('../../img/video-shooting-desk.jpg');
+    background-image: url('../img/video-shooting-desk.jpg');
   }
 }
 
