--- a/source/less/blocks/accessories.less
+++ b/source/less/blocks/accessories.less
@@ -32,20 +32,20 @@
 
 .accessories__group-1 {
   min-height: 301px;
-  background-image: url('../../img/accessories__group-1.jpg');
+  background-image: url('../img/accessories__group-1.jpg');
   background-repeat: no-repeat;
   background-position: top;
   margin: 0 15px;
 
   @media (min-width: 720px) {
-    background-image: url('../../img/accessories__group-1-tabl.jpg');
+    background-image: url('../img/accessories__group-1-tabl.jpg');
     flex-basis: 48.5%;
     margin: 0;
   }
 
   @media (min-width: 1000px) {
     flex-basis: 23%;
-    background-image: url('../../img/accessories__group-1-desk.jpg');
+    background-image: url('../img/accessories__group-1-desk.jpg');
   }
 }
 
@@ -63,20 +63,20 @@
 
 .accessories__group-2 {
   min-height: 259px;
-  background-image: url('../../img/accessories__group-2.jpg');
+  background-image: url('../img/accessories__group-2.jpg');
   background-position: top;
   background-repeat: no-repeat;
   margin: 0 15px;
 
   @media (min-width: 720px) {
-    background-image: url('../../img/accessories__group-2-tabl.jpg');
+    background-image: url('../img/accessories__group-2-tabl.jpg');
     flex-basis: 48.5%;
     margin: 0;
   }
 
   @media (min-width: 1000px) {
     flex-basis: 23%;
-    background-image: url('../../img/accessories__group-2-desk.jpg');
+    background-image: url('../img/accessories__group-2-desk.jpg');
   }
 }
 
