--- a/source/less/blocks/apps.less
+++ b/source/less/blocks/apps.less
@@ -50,11 +50,14 @@
   }
 
   @media (min-width: 720px) {
-    flex-basis: 30%;
+    // flex-basis: 30%;
+    max-width: 201px;
     flex-direction: column;
+    justify-content: start;
   }
 
   @media (min-width: 1000px) {
+    max-width: none;
     flex-basis: 30%;
   }
 }
@@ -79,3 +82,4 @@
     padding: 20px 10px 0 0;
   }
 }
+
