--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -16,3 +16,12 @@
     padding: 40px 25px;
   }
 }
+
+.main {
+  @media (min-width: 1200px) {
+    width: 100%;
+    max-width: 1200px;
+    padding: 0 20px;
+    margin: 0 auto;
+  }
+}
