--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,3 +1,11 @@
+.header {
+  @media (min-width: 1200px) {
+    width: 100%;
+    max-width: 1120px;
+    margin: 0 auto;
+  }
+}
+
 .header__list {
   list-style: none;
   display: flex;
@@ -101,7 +109,7 @@
   cursor: pointer;
   width: 32px;
   height: 32px;
-  background-image: url('../img/burger.svg');
+  background-image: url('../img/burger-1.png');
   background-repeat: no-repeat;
   background-position: center;
   border: none;
