--- a/source/less/blocks/video-shooting.less
+++ b/source/less/blocks/video-shooting.less
@@ -5,7 +5,6 @@
 
   @media (min-width: 720px) {
     flex-direction: row;
-    justify-content: center;
   }
 
   @media (min-width: 1000px) {
@@ -61,7 +60,13 @@
   }
 
   @media (min-width: 1000px) {
+    display: flex;
+    flex-direction: column;
     max-width: 465px;
+  }
+
+  @media (min-width: 1200px) {
+    display: block;
   }
 
   @media (min-width: 1930px) {
