--- a/source/less/global.less
+++ b/source/less/global.less
@@ -5,4 +5,12 @@
   font-family: "PtRootUi";
 }
 
+p {
+  max-width: 320px;
+
+  @media (min-width: 1000px) {
+    max-width: 400px;
+    width: 100%;
+  }
+}
 
